// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should be equal snapshot with fruit cell 1`] = `
.c0 {
  display: grid;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  width: 100%;
  height: 100%;
  padding: 0.15em;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  background: black;
  background: white;
  -webkit-animation-name: crdVsA;
  animation-name: crdVsA;
  -webkit-animation-duration: 0.6s;
  animation-duration: 0.6s;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      type="fruit"
    />
  </div>
</div>
`;

exports[`Cell should be equal snapshot with snakeHead cell 1`] = `
.c0 {
  display: grid;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  width: 100%;
  height: 100%;
  padding: 0.15em;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  background: black;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`Cell should be equal snapshot with snakeSection cell 1`] = `
.c0 {
  display: grid;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  width: 100%;
  height: 100%;
  padding: 0.15em;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  background: black;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`Cell should be equal snapshot with stock cell 1`] = `
.c0 {
  display: grid;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  width: 100%;
  height: 100%;
  padding: 0.15em;
}

.c1 {
  display: block;
  width: 100%;
  height: 100%;
  background: black;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</div>
`;
